Fix: GlobalExceptionHandler 에 예외들 추가